correcion de input de ingresar gastos

--- a/src/index.css
+++ b/src/index.css
@@ -402,3 +402,12 @@ body .modal {
     font-size: 2.4rem;
     text-align: right;
 }
+
+
+.centrar{
+    text-align: center !important;
+}
+
+.ancho{
+    width: 80% !important;
+}
